--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -5,15 +5,15 @@ h1 {
 }
 
 .arial {
-    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    font-weight: bold;
+    font-family: 'Open Sans', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
+    font-weight: 350;
 }
 
 .arial2 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: normal;
-    font-size: 30px;
+    font-family: 'Open Sans', 'Arial Narrow', Arial, sans-serif;
+    font-weight:390;
+    font-size: 25px;
     text-align: left;
 }
 
