--- a/css/layout.css
+++ b/css/layout.css
@@ -11,6 +11,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: x-large;
     border-bottom: solid rgb(193, 189, 189);
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .bodyupper {
@@ -19,7 +21,9 @@
     right: 5px;
     height: 500px;
     font-size: large;
-    border-bottom: solid rgb(193, 189, 189); 
+    border-bottom: solid rgb(193, 189, 189);
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .bodyr {
@@ -29,6 +33,8 @@
     bottom: 44px;
     border-bottom: solid rgb(193, 189, 189);
     border-left: solid rgb(193, 189, 189);
+    padding-left: 5px;
+    padding-right: 15px;
 }
 
 .bodyl {
